--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -5,6 +5,7 @@
 
   box-sizing: border-box;
   overflow: hidden;
+  width: 100%;
   height: 100vh;
   grid-template-rows: 74px 1fr 1fr;
 
