--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,5 +1,6 @@
 .menu {
   box-sizing: border-box;
+  width: calc(100% - 10px);
   height: 100vh;
   background: $c-bg;
   overflow: auto;
