--- a/src/styles/blocks/video.scss
+++ b/src/styles/blocks/video.scss
@@ -1,22 +1,28 @@
 .video {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding-inline: 12px;
   padding-bottom: 110px;
 
-  @include on-desktop {
-    padding-inline: 297px;
-    padding-bottom: 170px;
+  @include on-tablet {
+    padding-inline: 34px;
+    padding-bottom: 140px;
 
   }
-  &__container {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    padding-top: 50%;
+  
+  @include on-desktop {
+    display: grid;
+    place-items: center;
+    padding-bottom: 170px;
   }
-  &__responsive {
-    position: absolute;
-    inset: 0;
+
+  &__image {
     width: 100%;
-    height: 100%;
+    object-fit: contain;
+
+    @include on-desktop {
+      width: 70%;
+    }
   }
 }
